# Co-VINS-ROS2

./: .gitattributes  README.md
agent_msg/: CMakeLists.txt  package.xml
agent_msg/msg/: AgentMsg.msg
camera_model/: CMakeLists.txt  instruction  package.xml  readme.md
config/: config.rviz  multi_agent_rviz.rviz
config/euroc/: euroc_config.yaml
config/zed2i/: left.yaml  zed2i_imu_config.yaml
docker/: dockerfile  run.sh
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
pose_graph/: CMakeLists.txt  package.xml
pose_graph/cmake/: FindEigen.cmake
pose_graph/launch/: master.launch
pose_graph/src/: parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: A3_swarm.launch  euroc_multi_agent.launch.py  vins_swarm.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
vins_estimator/support_files/: brief_pattern.yml
