<?xml version="1.0"?>
<package format="3">
  <name>feature_tracker</name>
  <version>0.1.0</version>
  <description>Feature tracking module migrated from ROS 1 to ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  
  
  <depend>camera_model</depend>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时/编译时的依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>ament_index_cpp</build_depend>        <!-- 用于获取 share 目录 -->
  <build_depend>Boost</build_depend>
  <build_depend>ceres-solver</build_depend>
  

  <!-- 如果用到了 rclcpp_components，可保留这一行 -->
  <build_depend>rclcpp_components</build_depend>
  
  <exec_depend>ceres-solver</exec_depend>
  <exec_depend>Boost</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
