<?xml version="1.0"?>
<package format="3">
  <name>pose_graph</name>
  <version>0.1.0</version>
  <description>pose_graph package (ROS 2 / ament_cmake)</description>

  <maintainer email="tony-ws@todo.todo">tony-ws</maintainer>
  <license>TODO</license>

  <!-- 使用 ament_cmake 构建 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 编译和运行时依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>camera_model</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>agent_msg</depend>

  <!-- 如果有测试，请保留下面两行 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
