<?xml version="1.0"?>
<package format="2">
  <name>vins_estimator</name>
  <version>0.0.0</version>
  <description>vins_estimator package migrated from ROS 1 to ROS 2</description>

  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <license>TODO</license>

  <!-- 用于 ament_cmake 构建 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 运行时及构建依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>camera_model</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
